[gd_scene load_steps=20 format=2]

[ext_resource path="res://Fonts/modelo_fonte_quiz.tres" type="DynamicFont" id=1]
[ext_resource path="res://Cenas/Dado.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cenas/Pino.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cenas/Bot達o_confirma.gd" type="Script" id=4]
[ext_resource path="res://Cenas/MainGame.gd" type="Script" id=5]
[ext_resource path="res://Cenas/Quiz.gd" type="Script" id=6]
[ext_resource path="res://Fonts/MainGame.tres" type="DynamicFont" id=7]
[ext_resource path="res://Sprites/Star 1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Botoes/label_quiz.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Botoes/testes.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Botoes/bt_confirmar.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Frame 6.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Botoes/bt_quiz_padrao.png" type="Texture" id=13]

[sub_resource type="AtlasTexture" id=1]

[sub_resource type="AtlasTexture" id=2]

[sub_resource type="AtlasTexture" id=3]

[sub_resource type="AtlasTexture" id=4]

[sub_resource type="Theme" id=5]

[sub_resource type="Theme" id=6]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[node name="MainNode" type="Node"]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 164.161, 503.945, 151.998, 258.378 ],
"_edit_vertical_guides_": [ 847.609, 233.434, 304.0, 778.0 ]
}

[node name="Tabuleiro" type="Sprite" parent="."]
position = Vector2( 539.275, 357.737 )
z_index = -3
texture = ExtResource( 12 )

[node name="Dado" parent="." instance=ExtResource( 2 )]

[node name="Pino" parent="." instance=ExtResource( 3 )]

[node name="Pino_sprite" type="Sprite" parent="Pino"]
position = Vector2( 113.393, 403.175 )
z_index = -1
texture = ExtResource( 8 )
region_rect = Rect2( -28, 15.5, 51, 88.5 )

[node name="Timer" type="Timer" parent="Pino"]

[node name="Quiz" type="Node2D" parent="."]
visible = false
script = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="Quiz"]
position = Vector2( 539.69, 359.084 )
scale = Vector2( 1.00699, 1 )
z_index = -1
texture = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="Quiz"]
position = Vector2( 540, 360 )
z_index = -1
texture = ExtResource( 9 )

[node name="Button1" type="CheckButton" parent="Quiz"]
margin_left = 354.0
margin_top = 277.0
margin_right = 725.0
margin_bottom = 343.0
focus_mode = 0
custom_icons/off = SubResource( 1 )
custom_icons/on_disabled = SubResource( 2 )
custom_icons/on = SubResource( 3 )
custom_icons/off_disabled = SubResource( 4 )
custom_fonts/font = ExtResource( 7 )
enabled_focus_mode = 0
clip_text = true
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite_bt1" type="Sprite" parent="Quiz/Button1"]
position = Vector2( 186.5, 36.9796 )
z_index = -1
texture = ExtResource( 13 )

[node name="label_bt1" type="Label" parent="Quiz/Button1"]
margin_left = 32.0
margin_right = 340.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.941176, 0.666667, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="CheckButton" parent="Quiz"]
margin_left = 354.0
margin_top = 357.0
margin_right = 725.0
margin_bottom = 423.0
focus_mode = 0
custom_icons/off = SubResource( 1 )
custom_icons/on_disabled = SubResource( 2 )
custom_icons/on = SubResource( 3 )
custom_icons/off_disabled = SubResource( 4 )
custom_fonts/font = ExtResource( 7 )
enabled_focus_mode = 0
clip_text = true
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite_bt2" type="Sprite" parent="Quiz/Button2"]
position = Vector2( 186.5, 36.9796 )
z_index = -1
texture = ExtResource( 13 )

[node name="label_bt2" type="Label" parent="Quiz/Button2"]
margin_left = 32.0
margin_right = 340.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.941176, 0.666667, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="CheckButton" parent="Quiz"]
margin_left = 354.0
margin_top = 437.0
margin_right = 725.0
margin_bottom = 503.0
focus_mode = 0
custom_icons/off = SubResource( 1 )
custom_icons/on_disabled = SubResource( 2 )
custom_icons/on = SubResource( 3 )
custom_icons/off_disabled = SubResource( 4 )
custom_fonts/font = ExtResource( 7 )
enabled_focus_mode = 0
flat = true
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite_bt3" type="Sprite" parent="Quiz/Button3"]
position = Vector2( 186.5, 36.9796 )
z_index = -1
texture = ExtResource( 13 )

[node name="label_bt3" type="Label" parent="Quiz/Button3"]
margin_left = 36.0
margin_right = 340.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.941176, 0.666667, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Quiz"]
anchor_bottom = 0.365
margin_left = 306.0
margin_top = 169.0
margin_right = 775.0
margin_bottom = 243.0
theme = SubResource( 5 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.941176, 0.666667, 0, 1 )
text = "
"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bot達o_confirma" type="Button" parent="Quiz"]
margin_left = 455.0
margin_top = 540.0
margin_right = 613.0
margin_bottom = 582.0
theme = SubResource( 6 )
flat = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite_confirma" type="Sprite" parent="Quiz/Bot達o_confirma"]
position = Vector2( 82.0243, 24.0416 )
texture = ExtResource( 11 )

[node name="Timer" type="Timer" parent="Quiz"]
wait_time = 0.509
[connection signal="dado_rolado" from="Dado" to="Pino" method="dado_rolado"]
[connection signal="abre_quiz" from="Pino" to="Quiz" method="abre_quiz"]
[connection signal="oi" from="Pino" to="Quiz" method="_on_Pino_oi"]
[connection signal="timeout" from="Pino/Timer" to="Pino" method="_on_Timer_timeout"]
[connection signal="resposta_errada" from="Quiz" to="Pino" method="resposta_errada"]
[connection signal="button_up" from="Quiz/Button1" to="Quiz" method="botao1_clicado"]
[connection signal="button_up" from="Quiz/Button2" to="Quiz" method="botao2_clicado"]
[connection signal="button_up" from="Quiz/Button3" to="Quiz" method="botao3_clicado"]
[connection signal="button_up" from="Quiz/Bot達o_confirma" to="Quiz" method="confirmacao"]
[connection signal="timeout" from="Quiz/Timer" to="Quiz" method="fim_timer"]
